AnlrArbol/recipebookParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\kirot\source\repos\AnlrArbol\AnlrArbol\recipebook.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class recipebookParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, LINE_START=9, 
		GUION=10, REC_LBL=11, POR_LBL=12, TMP_LBL=13, TMC_LBL=14, CAL_LBL=15, 
		ING_LBL=16, ELA_LBL=17, LIST_ORDER_SEP=18, COM=19, SEP=20, TAB=21, WS=22, 
		NL=23, NUMBER=24, FLOAT=25, INT=26, TEXT=27, WORD=28;
	public const int
		RULE_recipebook = 0, RULE_book = 1, RULE_entry = 2, RULE_recipe_tag = 3, 
		RULE_recipe_name = 4, RULE_portions_tag = 5, RULE_portion_unit = 6, RULE_prep_time_tag = 7, 
		RULE_cooking_time_tag = 8, RULE_calories_tag = 9, RULE_calories_content = 10, 
		RULE_calorie_unit = 11, RULE_ingredients_tag = 12, RULE_ingredient_list = 13, 
		RULE_ingredient_list_item = 14, RULE_ingredient_name = 15, RULE_elaboration_tag = 16, 
		RULE_elaboration_list = 17, RULE_elaboration_list_item = 18, RULE_order = 19, 
		RULE_instruction = 20, RULE_time = 21, RULE_time_unit = 22, RULE_amount = 23;
	public static readonly string[] ruleNames = {
		"recipebook", "book", "entry", "recipe_tag", "recipe_name", "portions_tag", 
		"portion_unit", "prep_time_tag", "cooking_time_tag", "calories_tag", "calories_content", 
		"calorie_unit", "ingredients_tag", "ingredient_list", "ingredient_list_item", 
		"ingredient_name", "elaboration_tag", "elaboration_list", "elaboration_list_item", 
		"order", "instruction", "time", "time_unit", "amount"
	};

	private static readonly string[] _LiteralNames = {
		null, "'min'", "'minute'", "'sec'", "'second'", "'hr'", "'hour'", "'day'", 
		"'s'", null, "'-'", "'RECETA'", "'PORCIONES'", "'TIEMPO PREPARACION'", 
		"'TIEMPO COCCION'", "'CALORIAS'", "'INGREDIENTES'", "'ELABORACION'", "')'", 
		"','", "':'", "'\t'", null, "'\n'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, "LINE_START", "GUION", 
		"REC_LBL", "POR_LBL", "TMP_LBL", "TMC_LBL", "CAL_LBL", "ING_LBL", "ELA_LBL", 
		"LIST_ORDER_SEP", "COM", "SEP", "TAB", "WS", "NL", "NUMBER", "FLOAT", 
		"INT", "TEXT", "WORD"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "recipebook.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static recipebookParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public recipebookParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public recipebookParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class RecipebookContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BookContext book() {
			return GetRuleContext<BookContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(recipebookParser.Eof, 0); }
		public RecipebookContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_recipebook; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRecipebook(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RecipebookContext recipebook() {
		RecipebookContext _localctx = new RecipebookContext(Context, State);
		EnterRule(_localctx, 0, RULE_recipebook);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			book();
			State = 49;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BookContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EntryContext[] entry() {
			return GetRuleContexts<EntryContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EntryContext entry(int i) {
			return GetRuleContext<EntryContext>(i);
		}
		public BookContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_book; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBook(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BookContext book() {
		BookContext _localctx = new BookContext(Context, State);
		EnterRule(_localctx, 2, RULE_book);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 51;
				entry();
				}
				}
				State = 54;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==LINE_START );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Recipe_tagContext recipe_tag() {
			return GetRuleContext<Recipe_tagContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Portions_tagContext portions_tag() {
			return GetRuleContext<Portions_tagContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Calories_tagContext calories_tag() {
			return GetRuleContext<Calories_tagContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Ingredients_tagContext ingredients_tag() {
			return GetRuleContext<Ingredients_tagContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Elaboration_tagContext elaboration_tag() {
			return GetRuleContext<Elaboration_tagContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Prep_time_tagContext prep_time_tag() {
			return GetRuleContext<Prep_time_tagContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Cooking_time_tagContext cooking_time_tag() {
			return GetRuleContext<Cooking_time_tagContext>(0);
		}
		public EntryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entry; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntry(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntryContext entry() {
		EntryContext _localctx = new EntryContext(Context, State);
		EnterRule(_localctx, 4, RULE_entry);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			recipe_tag();
			State = 57;
			portions_tag();
			State = 59;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 58;
				prep_time_tag();
				}
				break;
			}
			State = 62;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 61;
				cooking_time_tag();
				}
				break;
			}
			State = 64;
			calories_tag();
			State = 65;
			ingredients_tag();
			State = 66;
			elaboration_tag();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Recipe_tagContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_START() { return GetToken(recipebookParser.LINE_START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REC_LBL() { return GetToken(recipebookParser.REC_LBL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEP() { return GetToken(recipebookParser.SEP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Recipe_nameContext recipe_name() {
			return GetRuleContext<Recipe_nameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL() { return GetToken(recipebookParser.NL, 0); }
		public Recipe_tagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_recipe_tag; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRecipe_tag(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Recipe_tagContext recipe_tag() {
		Recipe_tagContext _localctx = new Recipe_tagContext(Context, State);
		EnterRule(_localctx, 6, RULE_recipe_tag);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			Match(LINE_START);
			State = 69;
			Match(REC_LBL);
			State = 70;
			Match(SEP);
			State = 71;
			recipe_name();
			State = 72;
			Match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Recipe_nameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT() { return GetToken(recipebookParser.TEXT, 0); }
		public Recipe_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_recipe_name; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRecipe_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Recipe_nameContext recipe_name() {
		Recipe_nameContext _localctx = new Recipe_nameContext(Context, State);
		EnterRule(_localctx, 8, RULE_recipe_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			Match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Portions_tagContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_START() { return GetToken(recipebookParser.LINE_START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode POR_LBL() { return GetToken(recipebookParser.POR_LBL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEP() { return GetToken(recipebookParser.SEP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AmountContext amount() {
			return GetRuleContext<AmountContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WS() { return GetToken(recipebookParser.WS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Portion_unitContext portion_unit() {
			return GetRuleContext<Portion_unitContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL() { return GetToken(recipebookParser.NL, 0); }
		public Portions_tagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_portions_tag; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPortions_tag(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Portions_tagContext portions_tag() {
		Portions_tagContext _localctx = new Portions_tagContext(Context, State);
		EnterRule(_localctx, 10, RULE_portions_tag);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			Match(LINE_START);
			State = 77;
			Match(POR_LBL);
			State = 78;
			Match(SEP);
			State = 79;
			amount();
			State = 80;
			Match(WS);
			State = 81;
			portion_unit();
			State = 82;
			Match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Portion_unitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT() { return GetToken(recipebookParser.TEXT, 0); }
		public Portion_unitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_portion_unit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPortion_unit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Portion_unitContext portion_unit() {
		Portion_unitContext _localctx = new Portion_unitContext(Context, State);
		EnterRule(_localctx, 12, RULE_portion_unit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			Match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Prep_time_tagContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_START() { return GetToken(recipebookParser.LINE_START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TMP_LBL() { return GetToken(recipebookParser.TMP_LBL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEP() { return GetToken(recipebookParser.SEP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TimeContext time() {
			return GetRuleContext<TimeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL() { return GetToken(recipebookParser.NL, 0); }
		public Prep_time_tagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prep_time_tag; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrep_time_tag(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Prep_time_tagContext prep_time_tag() {
		Prep_time_tagContext _localctx = new Prep_time_tagContext(Context, State);
		EnterRule(_localctx, 14, RULE_prep_time_tag);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(LINE_START);
			State = 87;
			Match(TMP_LBL);
			State = 88;
			Match(SEP);
			State = 89;
			time();
			State = 90;
			Match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Cooking_time_tagContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_START() { return GetToken(recipebookParser.LINE_START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TMC_LBL() { return GetToken(recipebookParser.TMC_LBL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEP() { return GetToken(recipebookParser.SEP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TimeContext time() {
			return GetRuleContext<TimeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL() { return GetToken(recipebookParser.NL, 0); }
		public Cooking_time_tagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cooking_time_tag; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCooking_time_tag(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Cooking_time_tagContext cooking_time_tag() {
		Cooking_time_tagContext _localctx = new Cooking_time_tagContext(Context, State);
		EnterRule(_localctx, 16, RULE_cooking_time_tag);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			Match(LINE_START);
			State = 93;
			Match(TMC_LBL);
			State = 94;
			Match(SEP);
			State = 95;
			time();
			State = 96;
			Match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Calories_tagContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_START() { return GetToken(recipebookParser.LINE_START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CAL_LBL() { return GetToken(recipebookParser.CAL_LBL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEP() { return GetToken(recipebookParser.SEP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Calories_contentContext calories_content() {
			return GetRuleContext<Calories_contentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL() { return GetToken(recipebookParser.NL, 0); }
		public Calories_tagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_calories_tag; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCalories_tag(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Calories_tagContext calories_tag() {
		Calories_tagContext _localctx = new Calories_tagContext(Context, State);
		EnterRule(_localctx, 18, RULE_calories_tag);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			Match(LINE_START);
			State = 99;
			Match(CAL_LBL);
			State = 100;
			Match(SEP);
			State = 101;
			calories_content();
			State = 102;
			Match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Calories_contentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AmountContext amount() {
			return GetRuleContext<AmountContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WS() { return GetToken(recipebookParser.WS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Calorie_unitContext calorie_unit() {
			return GetRuleContext<Calorie_unitContext>(0);
		}
		public Calories_contentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_calories_content; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCalories_content(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Calories_contentContext calories_content() {
		Calories_contentContext _localctx = new Calories_contentContext(Context, State);
		EnterRule(_localctx, 20, RULE_calories_content);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			amount();
			State = 105;
			Match(WS);
			State = 106;
			calorie_unit();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Calorie_unitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT() { return GetToken(recipebookParser.TEXT, 0); }
		public Calorie_unitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_calorie_unit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCalorie_unit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Calorie_unitContext calorie_unit() {
		Calorie_unitContext _localctx = new Calorie_unitContext(Context, State);
		EnterRule(_localctx, 22, RULE_calorie_unit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108;
			Match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Ingredients_tagContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_START() { return GetToken(recipebookParser.LINE_START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ING_LBL() { return GetToken(recipebookParser.ING_LBL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEP() { return GetToken(recipebookParser.SEP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(recipebookParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(recipebookParser.NL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Ingredient_listContext ingredient_list() {
			return GetRuleContext<Ingredient_listContext>(0);
		}
		public Ingredients_tagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ingredients_tag; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIngredients_tag(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Ingredients_tagContext ingredients_tag() {
		Ingredients_tagContext _localctx = new Ingredients_tagContext(Context, State);
		EnterRule(_localctx, 24, RULE_ingredients_tag);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			Match(LINE_START);
			State = 111;
			Match(ING_LBL);
			State = 112;
			Match(SEP);
			State = 113;
			Match(NL);
			State = 114;
			ingredient_list();
			State = 115;
			Match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Ingredient_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Ingredient_list_itemContext[] ingredient_list_item() {
			return GetRuleContexts<Ingredient_list_itemContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Ingredient_list_itemContext ingredient_list_item(int i) {
			return GetRuleContext<Ingredient_list_itemContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COM() { return GetTokens(recipebookParser.COM); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COM(int i) {
			return GetToken(recipebookParser.COM, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(recipebookParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(recipebookParser.NL, i);
		}
		public Ingredient_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ingredient_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IrecipebookVisitor<TResult> typedVisitor = visitor as IrecipebookVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIngredient_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Ingredient_listContext ingredient_list() {
		Ingredient_listContext _localctx = new Ingredient_listContext(Context, State);
		EnterRule(_localctx, 26, RULE_ingredient_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			ingredient_list_item();
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COM) {
				{
				{
				State = 118;
				Match(COM);
				State = 119;
				Match(NL);
				State = 120;
				ingredient_list_item();
				}
				}
				State = 125;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
